crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m176_12_in_1_console_tv_game_cartridge.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-176-WaixingFK23C/12-in-1 Console TV Game Cartridge (Unl) [!].zip
rom_sha256=bc2b23e13eda9d9415d9a807c46d5492cd2a2fbafad0e04bb5abc41aaf17f260
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=6ac78d521aeb09e7
checkpoint f600 fb_fnv1a64=7e0049064455efb4
