crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m180_crazy_climber.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-180-UNROM-Nichibutsu/Crazy Climber (J) [!].nes
rom_sha256=1e9d9412e43a2fb39f48e6f54ca0b0507bedd456084281f57c4b4e9a86efd9fe
frames=600
fb_bytes=245760
cycles=17838524
audio_samples=439524
audio_fnv1a64=eb953a0e5960e025
checkpoint f600 fb_fnv1a64=58b53452d136f2d4
