crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m185_b_wings.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-185-CNROM-Lock/B-Wings (J) [!].nes
rom_sha256=40ab99e6c8aec2741503b7e69d2597fbff518ece062f78a1b028b5fac3b6b9ae
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=63cb975fe8eabeef
checkpoint f600 fb_fnv1a64=df4b6a35f159caa5
