crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m193_war_in_the_gulf.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-193-NTDEC-TC112/War in The Gulf (B) (Unl) [!].zip
rom_sha256=a3041e1693a8022c3434fb601404c5d5ac5e7d1d34860acfc2bf38e29e050255
frames=600
fb_bytes=245760
cycles=17838525
audio_samples=439524
audio_fnv1a64=9e89db681d3228ce
checkpoint f600 fb_fnv1a64=cd48bc11d446c0f7
